--- a/src/ui/css/content.css
+++ b/src/ui/css/content.css
@@ -1,4 +1,5 @@
-html, body {
+html,
+body {
   height: 100%;
 }
 
@@ -12,9 +13,9 @@ main {
  **/
 
 h1 {
-  padding-bottom: 10px;
   margin-bottom: 20px;
+  padding-bottom: 10px;
   border-bottom: 1px solid var(--borderSecond-color);
-  font-size: 22px;
   font-weight: normal;
+  font-size: 22px;
 }
