--- a/src/ui/css/index.css
+++ b/src/ui/css/index.css
@@ -1,4 +1,5 @@
-html, body {
+html,
+body {
   height: 100%;
 }
 
@@ -14,14 +15,14 @@ body {
 
 #Sidebar {
   display: flex;
-  flex-direction: column;
   height: 100%;
+  flex-direction: column;
   padding: 0 30px 0 30px;
   background: var(--sidebar-color);
 }
 
 .logo {
-  width: 80px;
+  width: 70px;
   align-self: center;
   margin: 40px 0 10px 0;
 }
@@ -38,18 +39,18 @@ body {
 
 .nav-item > a {
   display: flex;
-  flex-direction: row;
   align-items: center;
+  flex-direction: row;
   color: var(--textThird-color);
   text-decoration: none;
   font-size: 18px;
   cursor: pointer;
-  transition: color 0.2s;
+  transition: color .2s;
 }
 
 .nav-item-symbol {
-  color: inherit;
   padding-right: 15px;
+  color: inherit;
   font-size: 30px;
   font-family: Icons;
 }
@@ -58,7 +59,8 @@ body {
   color: inherit;
 }
 
-.nav-item > a:hover, .nav-item > a.active {
+.nav-item > a:hover,
+.nav-item > a.active {
   color: var(--highlighted-color);
 }
 
@@ -86,15 +88,15 @@ body {
 }
 
 .theme-button {
-  height: 15px;
+  display: flex;
   width: 15px;
+  height: 15px;
+  justify-content: center;
   margin: 0 7px;
   border-radius: 50%;
   background-color: green;
-  display: flex;
-  justify-content: center;
-  transition: box-shadow 0.3s;
   box-shadow: 0 0 3px 0 rgba(0,0,0,1);
+  transition: box-shadow .3s;
 }
 
 .theme-button.theme-default {
@@ -114,10 +116,10 @@ body {
 }
 
 .themes input[type="radio"]:checked + .theme-button::after {
-  content: "";
-  height: 5px;
   width: 5px;
+  height: 5px;
   border-radius: 50%;
   background: var(--border-color);
+  content: "";
   transform: translateY(20px);
 }
