--- a/src/ui/css/modules/gesture-popup.css
+++ b/src/ui/css/modules/gesture-popup.css
@@ -1,40 +1,48 @@
  @font-face {
-   font-family: "firefox-gesture-arrows";
-   src: url("/res/fonts/arrows.woff");
-   font-weight: normal;
-   font-style: normal;
- }
+  font-weight: normal;
+  font-style: normal;
+  font-family: "firefox-gesture-arrows";
+  src: url("/res/fonts/arrows.woff");
+}
 
 .gesture-popup {
-  z-index: 10;
+  display: flex;
   position: fixed;
   top: 50%;
   left: 50%;
-  transform: translate(-50%, -50%) scale(1);
-  display: flex;
-  flex-direction: column;
-  width: 100%;
+  z-index: 10;
   max-width: 850px;
-  background: var(--base-color, #FFF);
-  box-shadow: 0 0 8px 2px var(--shadowSecond-color, #999);
+  width: 100%;
+  flex-direction: column;
+  background: var(--base-color, #FFFFFF);
+  box-shadow: 0 0 8px 2px var(--shadowSecond-color, #999999);
+  transform: translate(-50%, -50%) scale(1);
 }
 
 /* transition classes */
 
 .gesture-popup.gp-show {
-  animation: gesturePopupShow 0.3s;
+  animation: gesturePopupShow .3s;
 }
 
 .gesture-popup.gp-hide {
-  transform: translate(-50%, -50%) scale(0.6);
   opacity: 0;
-  transition: transform 0.3s, opacity 0.3s;
+  transition: transform .3s, opacity .3s;
+  transform: translate(-50%, -50%) scale(.6);
 }
 
 @keyframes gesturePopupShow {
-  from {opacity: 0; transform: translate(-50%, -50%) scale(0.5);}
-  50% {transform: translate(-50%, -50%) scale(1.05)}
-  to {opacity: 1; transform: translate(-50%, -50%) scale(1);}
+  from {
+    opacity: 0;
+    transform: translate(-50%, -50%) scale(.5);
+  }
+  50% {
+    transform: translate(-50%, -50%) scale(1.05);
+  }
+  to {
+    opacity: 1;
+    transform: translate(-50%, -50%) scale(1);
+  }
 }
 
 /* popup head */
@@ -49,11 +57,11 @@
 
 .gp-cancel-button {
   margin-left: auto;
-  font-family: Icons;
-  font-size: 12px;
-  text-align: right;
-  cursor: pointer;
   background: none;
+  text-align: right;
+  font-size: 12px;
+  font-family: Icons;
+  cursor: pointer;
 }
 
 .gp-cancel-button:hover {
@@ -65,25 +73,25 @@
 }
 
 .gp-heading {
-  font-size: 18px;
-  font-weight: normal;
   text-align: left;
+  font-weight: normal;
+  font-size: 18px;
 }
 
 /* popup main */
 
 .gp-main {
   display: flex;
+  flex: 1;
   flex-direction: row;
   padding: 20px;
-  flex: 1;
 }
 
 /* left form content */
 
 .gp-form {
-  width: 250px;
   display: flex;
+  width: 250px;
   flex-direction: column;
   margin-right: 20px;
 }
@@ -100,25 +108,25 @@
   margin-top: 40px;
 }
 
-.gp-field-name {}
+
 
 .gp-field-description {
-  font-size: 14px;
-  opacity: 0.5;
+  opacity: .5;
   text-align: justify;
-  transition: opacity 0.3s;
+  font-size: 14px;
+  transition: opacity .3s;
 }
 
 .gp-field-input {
   width: 100%;
-  padding: 5px;
-  border: 1px solid var(--border-color, #ddd);
   box-sizing: border-box;
-  text-align: center;
+  padding: 5px;
+  border: 1px solid var(--border-color, #DDDDDD);
   border-radius: 2px;
-  background-color: var(--base-color, #FFF);
-  text-overflow: ellipsis;
+  background-color: var(--base-color, #FFFFFF);
   color: var(--textThird-color, #555555);
+  text-align: center;
+  text-overflow: ellipsis;
 }
 
 .gp-field-input:invalid {
@@ -131,10 +139,10 @@
 }
 
 .gp-command-button::after {
-  content: "c";
   position: absolute;
   top: 50%;
   right: 7px;
+  content: "c";
   font-size: 11px;
   font-family: Icons;
   transform: translateY(-50%);
@@ -145,32 +153,32 @@
 }
 
 .gp-field-input.gp-command {
-  cursor: pointer;
   padding-right: 28px;
+  cursor: pointer;
 }
 
 .gp-field-input.gp-code {
-  font-family: "firefox-gesture-arrows";
   text-transform: uppercase;
   letter-spacing: 5px;
+  font-family: "firefox-gesture-arrows";
 }
 
 .gp-field-input.gp-label::placeholder {
-  opacity: 0.5;
+  opacity: .5;
 }
 
 .gp-save-button {
-  cursor: pointer;
   margin-top: auto;
   padding: 8px 20px 5px 20px;
-  background: var(--highlighted-color, #00AAA0);
-  color: var(--textSecond-color, #FFF);
   border-radius: 2px;
-  transition: box-shadow 0.3s;
+  background: var(--highlighted-color, #00AAA0);
+  color: var(--textSecond-color, #FFFFFF);
+  cursor: pointer;
+  transition: box-shadow .3s;
 }
 
 .gp-save-button:hover {
-  box-shadow: 0 0 10px -4px var(--shadowSecond-color, #999);
+  box-shadow: 0 0 10px -4px var(--shadowSecond-color, #999999);
 }
 
 /* right area content */
@@ -178,24 +186,24 @@
 .gp-draw-area {
   position: relative;
   flex: 1;
-  border-image-source: url("/res/img/dashed_border_gray.png");
-  border-image-width: 1;
-  border-image-slice: 2;
-  border-image-repeat: round;
   border-style: solid;
+  border-image-source: url("/res/img/dashed_border_gray.png");
+  border-image-slice: 2;
+  border-image-width: 1;
+  border-image-repeat: round;
   cursor: crosshair;
 }
 
 .gp-draw-area::after {
-  content: attr(title);
   position: absolute;
   top: 50%;
   left: 50%;
-  transform: translate(-50%,-50%);
+  opacity: .2;
+  content: attr(title);
   text-align: center;
   font-size: 18px;
-  opacity: 0.2;
-  transition: opacity 0.3s;
+  transition: opacity .3s;
+  transform: translate(-50%,-50%);
 }
 
 .gp-draw-area:hover::after {
@@ -203,16 +211,16 @@
 }
 
 .gp-draw-area::before {
-  content: "";
-  padding-top: 100%;
   display: block;
+  padding-top: 100%;
+  content: "";
 }
 
 .gp-canvas {
   position: absolute;
   top: 0;
   left: 0;
-  height: 100%;
-  width: 100%;
   z-index: 1;
+  width: 100%;
+  height: 100%;
 }
