--- a/src/ui/css/modules/overlay.css
+++ b/src/ui/css/modules/overlay.css
@@ -2,15 +2,15 @@
   position: fixed;
   width: 100%;
   height: 100%;
-  background: var(--base-invert-color, #000);
-  opacity: 0.3;
-  transition: opacity 0.5s;
+  opacity: .3;
+  background: var(--base-invert-color, #000000);
+  transition: opacity .5s;
 }
 
 .overlay.o-show {
-  opacity: 0.3;
+  opacity: .3;
 }
 
 .overlay.o-hide {
-  opacity: 0.0;
+  opacity: .0;
 }
