--- a/src/ui/css/modules/overlay.css
+++ b/src/ui/css/modules/overlay.css
@@ -1,10 +1,12 @@
 .overlay {
   position: fixed;
+  top: 0;
+  left: 0;
   width: 100%;
   height: 100%;
   opacity: .3;
   background: var(--base-invert-color, #000000);
-  transition: opacity .5s;
+  transition: opacity .3s;
 }
 
 .overlay.o-show {
