--- a/src/ui/css/themes/dark.css
+++ b/src/ui/css/themes/dark.css
@@ -9,6 +9,7 @@
   --textThird-color: #EBEBEB !important;
   --border-color: #464e5e !important;
   --borderSecond-color: #464e5e !important;
+  --borderImage-Color: url("/res/img/dashed_border_dark.png") !important;
   --shadow-color: #464e5e !important;
   --shadowSecond-color: #252a32 !important;
   --highlighted-color: #00AAA0 !important;
