--- a/src/ui/css/themes/white.css
+++ b/src/ui/css/themes/white.css
@@ -9,6 +9,7 @@
   --textThird-color: #555555 !important;
   --border-color: #ddd !important;
   --borderSecond-color: #EAEAEA !important;
+  --borderImage-Color: url("/res/img/dashed_border_gray.png") !important;
   --shadow-color: #ddd !important;
   --shadowSecond-color: #999 !important;
   --highlighted-color: #00AAA0 !important;
