migrated background scripts to ES6 modules + minor fixes

--- a/src/core/css/gesture-indicator.css
+++ b/src/core/css/gesture-indicator.css
@@ -1,13 +1,13 @@
 @font-face {
   font-family: "firefox-gesture-arrows";
-  src: url("../../res/fonts/arrows.woff");
+  src: url("/res/fonts/arrows.woff");
   font-weight: normal;
   font-style: normal;
 }
 
 @font-face {
   font-family: "NunitoSans Regular";
-  src: url("../../res/fonts/NunitoSans-Regular.woff");
+  src: url("/res/fonts/NunitoSans-Regular.woff");
   font-weight: normal;
   font-style: normal;
 }
