--- a/src/options/css/layout.css
+++ b/src/options/css/layout.css
@@ -573,6 +573,8 @@ label.button > span {
   background-color: var(--base-color);
   color: var(--text-color);
   text-align: center;
+  overflow: hidden;
+  text-overflow: ellipsis;
 }
 
 .command-select-field:after {
