--- a/src/views/options/html/index.html
+++ b/src/views/options/html/index.html
@@ -4,17 +4,17 @@
   <meta charset="UTF-8">
   <title>Gesturefy</title>
   <link rel="icon" type="image/png" href="/resources/img/iconx32.png" sizes="16x16">
-  <link rel="stylesheet" href="/options/css/layout.css">
+  <link rel="stylesheet" href="/views/options/css/layout.css">
   <link rel="stylesheet" id="Theme">
 
-  <script src="/options/components/command-select/main.js" type="module"></script>
-  <script src="/options/components/popup-box/main.js" type="module"></script>
+  <script src="/views/options/components/command-select/main.js" type="module"></script>
+  <script src="/views/options/components/popup-box/main.js" type="module"></script>
 
-  <script src="/options/js/index.js" type="module"></script>
-  <script src="/options/js/content/settings.js" type="module"></script>
-  <script src="/options/js/content/gestures.js" type="module"></script>
-  <script src="/options/js/content/blacklist.js" type="module"></script>
-  <script src="/options/js/content/about.js" type="module"></script>
+  <script src="/views/options/js/index.js" type="module"></script>
+  <script src="/views/options/js/content/settings.js" type="module"></script>
+  <script src="/views/options/js/content/gestures.js" type="module"></script>
+  <script src="/views/options/js/content/blacklist.js" type="module"></script>
+  <script src="/views/options/js/content/about.js" type="module"></script>
 </head>
 
 <body>
@@ -64,11 +64,11 @@
   </div>
 
   <div id="Content">
-    <div class="content" data-include="/options/html/content/settings.inc" id="Settings"></div>
-    <div class="content" data-include="/options/html/content/gestures.inc" id="Gestures"></div>
-    <div class="content" data-include="/options/html/content/extras.inc" id="Extras"></div>
-    <div class="content" data-include="/options/html/content/blacklist.inc" id="Blacklist"></div>
-    <div class="content" data-include="/options/html/content/about.inc" id="About"></div>
+    <div class="content" data-include="/views/options/html/content/settings.inc" id="Settings"></div>
+    <div class="content" data-include="/views/options/html/content/gestures.inc" id="Gestures"></div>
+    <div class="content" data-include="/views/options/html/content/extras.inc" id="Extras"></div>
+    <div class="content" data-include="/views/options/html/content/blacklist.inc" id="Blacklist"></div>
+    <div class="content" data-include="/views/options/html/content/about.inc" id="About"></div>
   </div>
 </body>
 </html>
