fixed missing active theme indicator

--- a/src/views/options/css/layout.css
+++ b/src/views/options/css/layout.css
@@ -244,7 +244,7 @@ h2 {
   box-shadow: 0 0 6px 0 rgba(0,0,0,1);
 }
 
-.themes input[type="radio"]:checked + .theme-button::after {
+#themeSwitch input[type="radio"]:checked + .theme-button::after {
   width: 5px;
   height: 5px;
   border-radius: 50%;
