changed shadow color of dark theme

--- a/src/views/options/css/themes/dark.css
+++ b/src/views/options/css/themes/dark.css
@@ -10,7 +10,7 @@
   --borderSecond-color: #464e5e !important;
   --borderImage-Color: url("/resources/img/dashed_border_dark.png") !important;
   --shadow-color: #464e5e !important;
-  --shadowSecond-color: #252a32 !important;
+  --shadowSecond-color: rgba(200,200,200, 0.15) !important;
   --highlighted-color: #00AAA0 !important;
   --warning-color: #FF6347 !important;
 }
