updated options page to support pattern preview and recording; additionally: - added search for gestures - combined opacity and color field to one field using the new color picker component - changed restore dialog to ensure the user really wants to override the current config - changed some message strings

--- a/src/views/options/components/command-select/layout.css
+++ b/src/views/options/components/command-select/layout.css
@@ -290,6 +290,10 @@ a:focus {
   min-height: 100%;
 }
 
+#commandsContainer.search-runs .cb-scroll-container {
+  padding: 20px 0;
+}
+
 /* command list */
 
 .cb-command-group {
