--- a/src/views/options/html/index.html
+++ b/src/views/options/html/index.html
@@ -9,6 +9,7 @@
 
   <script src="/views/options/components/command-select/main.js" type="module"></script>
   <script src="/views/options/components/popup-box/main.js" type="module"></script>
+  <script src="/views/options/components/color-picker/main.js" type="module"></script>
 
   <script src="/views/options/js/index.js" type="module"></script>
   <script src="/views/options/js/content/settings.js" type="module"></script>
