--- a/src/views/options/components/command-select/layout.css
+++ b/src/views/options/components/command-select/layout.css
@@ -36,19 +36,29 @@
 }
 
 a {
-  color: var(--highlighted-color, #00AAA0);
-  text-decoration: none;
+  color: var(--highlighted-color);
+  text-decoration: underline dotted;
   cursor: pointer;
 }
 
 a:hover,
 a:focus {
-  text-decoration: underline;
+  text-decoration: underline solid;
+}
+
+a[target="_blank"]::after {
+  content: "E";
+  display:inline-block;
+  text-decoration: none;
+  font-family: Icons;
+  margin-left: 0.25em;
+  font-size: 0.75em;
 }
 
 .warning-text {
   color: var(--warning-color);
   opacity: 1 !important;
+  font-weight: bold;
 }
 
 *::-moz-focus-inner {
