--- a/src/views/options/css/layout.css
+++ b/src/views/options/css/layout.css
@@ -696,6 +696,7 @@ label.button > span {
 .gl-add-button {
   width: 100%;
   height: 100%;
+  min-height: 15em;
   background: none;
   border: dashed 3px var(--border-color);
   cursor: pointer;
